[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/models/key.obj" type="ArrayMesh" id=1]
[ext_resource path="res://scripts/Key.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/item/item_collect.ogg" type="AudioStream" id=3]

[sub_resource type="BoxShape" id=4]
extents = Vector3( 3.4917, 1.37457, 0.28749 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.741176, 0.839216, 0.905882, 1 )
metallic = 1.0
metallic_specular = 1.0
roughness = 0.25
clearcoat_enabled = true
clearcoat = 1.0
clearcoat_gloss = 1.0

[sub_resource type="CubeMesh" id=6]
size = Vector3( 20, 2, 20 )

[node name="Key" type="Spatial" groups=["item"]]
script = ExtResource( 2 )

[node name="key_item" type="KinematicBody" parent="."]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="key_item"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.16656, 0, 0 )
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="key_item"]
mesh = ExtResource( 1 )
material/0 = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.39137, 4.32622, 2.42041 )
editor_only = true
omni_range = 10.0
omni_attenuation = 1.1487

[node name="OmniLight2" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.65513, 0.65819, -3.93695 )
editor_only = true
omni_range = 10.0
omni_attenuation = 1.1487

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.869064, 0.4947, 0, -0.4947, 0.869064, -0.324809, 3.46803, 7.62231 )
visible = false

[node name="Ground" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0 )
visible = false
mesh = SubResource( 6 )
material/0 = null

[node name="ItemCollect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.0

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_completed"]
